<resources>
    <string name="app_name">GoCaching</string>
    <string name="searched">Searched:</string>
    <string name="cache">Cache:</string>
    <string name="where">where:</string>
    <string name="search_button">Search</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="add_cache_button">ADD CACHE</string>
    <string name="edit_cache_button">EDIT CACHE</string>
    <string name="info_text_view">Info:</string>
    <string name="List_Caches">LIST CACHES</string>
    <string name="cache_added">CACHE ADDED</string>
    <string
        name="google_maps_key"
        templateMergeStrategy="preserve"
        translatable="false" >AIzaSyCn5LZRftoR2Z-6t_gD9uHm52z1YsKQpiY
</string>
    <string name="delete_geocache">Delete</string>
    <string name="edit_geoCache">Edit Geocache</string>
    <string name="geocache_menu">Geocache Menu</string>
    <string name="capture">Capture</string>
    <string name="register_geocache">Register a geoCache</string>
    <string name="register">Register</string>
    <string name="Map">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeatps">Repeat password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="Username">User Name</string>
    <string name="caches_found">Caches Found: </string>
    <string name="easy_cache">Easy Caches: </string>
    <string name="medium_cache">Medium Caches: </string>
    <string name="Hard_cache">Hard Caches: </string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm">Confirm</string>
    <string name="ps_requirment1">Must be atleast 8 characters long</string>
    <string name="ps_requirment2">Must contain both numbers and letters</string>
    <string name="ps_requirment3">Must contain at least one uppercase character or special character</string>
    <string name="profile">Profile</string>
    <string name="approve">Approve</string>
    <string name="lat">Lat</string>
    <string name="long_">Long</string>
    <string name="difficulty">Difficulty</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="repeat">Repeat your new password</string>
    <string name="refresh">Refresh</string>
    <string name="route">Route</string>
    <string name="score">Score</string>

</resources>