<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".GoCachingActivity">

    <TextView
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />
    <Button
        android:id="@+id/add_cache_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_cache_button"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />
    <Button
        android:id="@+id/edit_cache_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_cache_button"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/list_caches_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/List_Caches"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cache_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="12sp"/>

</LinearLayout>